# dlt_with_ga4_getting_started

./: .gitignore  Procfile  README.md  pipeline.py  pyproject.toml  requirements.txt
.dlt/: .secrets.toml
sources/ga4_admin/: __init__.py
